; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_udp.c_uv__udp_bind.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_udp.c_uv__udp_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__udp_bind(i32* %0, %struct.sockaddr* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.sockaddr*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @uv_udp_maybe_bind(i32* %11, %struct.sockaddr* %12, i32 %13, i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %10, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @uv_translate_sys_error(i32 %19)
  store i32 %20, i32* %5, align 4
  br label %22

21:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %21, %18
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @uv_udp_maybe_bind(i32*, %struct.sockaddr*, i32, i32) #1

declare dso_local i32 @uv_translate_sys_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
